kubernetes-deployment/foundation/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: myapp
  type: NodePort
